--- a/client/css/style.css
+++ b/client/css/style.css
@@ -4,23 +4,17 @@
     color: white;
     font-family: 'Creepster', cursive;
     font-family: 'Open Sans', sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body {
     margin: 0;
     padding: 0;
-    background-color: #c62368;
     display: flex;
-}
-
-svg#visual {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    pointer-events: none;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    overflow: hidden;
 }
 
 h1 {
@@ -28,6 +22,7 @@ h1 {
     font-weight: 600;
     padding: 200px 0;
 }
+
 .side-bar {
     flex-grow: 1;
     background-color: #202123;
@@ -37,6 +32,7 @@ h1 {
     flex-direction: column;
     justify-content: space-between;
 }
+
 .sidebar .history {
     overflow-y: auto;
 }
@@ -45,24 +41,40 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
-    justify-content: space-between;
-    height: 100vh;
+    justify-content: center;
+    height: 100%;
     width: 100%;
+    background-image: url('/client/image/layered-waves-haikei.png');
+    padding: 20px;
 }
 
-.bottom-section {
+.chat-frame {
+    width: 100%;
+    max-width: 800px;
+    height: 100%;
+    border: 2px solid #fff;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+    justify-content: flex-end;
+    overflow: hidden;
+    background-color:rgba(255, 235, 205, 0.5);
 }
 
-.info {
-    color: rgba(255, 255, 255, 0.5);
-    font-size: 11px;
+.chat-container {
+    flex-grow: 1;
+    overflow-y: auto;
+    padding: 50px;
+    height: auto;
+}
+
+.input-container {
+    display: flex;
+    width: 100%;
     padding: 10px;
+    background-color:#c62368;
+    border-top: 1px solid #fff;
+    align-items: center;
 }
 
 input {
@@ -73,58 +85,74 @@ input {
     padding: 12px 15px;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.05) 0 54px 55px,
-        rgba(0, 0, 0, 0.05) 0 -12px 30px,
-        rgba(0, 0, 0, 0.05) 0 4px 6px,
-        rgba(0, 0, 0, 0.05) 0 12px 3px,
-        rgba(0, 0, 0, 0.09) 0 -3px 5px;
+                rgba(0, 0, 0, 0.05) 0 -12px 30px,
+                rgba(0, 0, 0, 0.05) 0 4px 6px,
+                rgba(0, 0, 0, 0.05) 0 12px 3px,
+                rgba(0, 0, 0, 0.09) 0 -3px 5px;
 }
 
 input:focus {
     outline: none;
 }
 
-.input-container {
-    position:relative;
-    width: 100%;
-    max-width: 650px;
-}
-
 .input-container #submit {
-    position:absolute;
-    right: 20;
-    bottom: 15px;
-    cursor:pointer;
+    margin-left: 10px;
+    cursor: pointer;
+    font-size: 20px;
 }
 
 button {
-    border : solid 0.5px rgba(255, 255, 255, 0.5);
+    border: solid 0.5px rgba(255, 255, 255, 0.5);
     background-color: transparent;
     border-radius: 5px;
-    padding:10px;
+    padding: 10px;
     margin: 10px;
 }
 
 nav {
-    border : solid 0.5px rgba(255, 255, 255, 0.5);
-    padding:10px;
+    border: solid 0.5px rgba(255, 255, 255, 0.5);
+    padding: 10px;
     margin: 10px;
     border-radius: 5px;
 }
 
 .history {
-    padding:10px;
+    padding: 10px;
     margin: 10px;
-    display:flex;
+    display: flex;
     flex-direction: column;
-    height:100%
+    height: 100%;
 }
 
-.history p {
-    cursor:pointer;
-}
-
-.image-container {
+.image-container, .audio-container {
     border-radius: 15px;
     overflow: hidden;
-    box-shadow: rgb(38, 57, 77) 0 20px 30px -10px;
+    margin-bottom: 10px;
+    height: auto;
+    width: 100%;
 }
+
+.user-message {
+    text-align: left;
+    margin: 10px 0;
+    width: 70%;
+    background-color: lightpink;
+    color:black;
+    border-radius: 10px;
+}
+
+.chatbot-message {
+    text-align: right;
+    margin: 10px 0;
+    max-width: 100%; 
+}
+
+.chat-item {
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color: lightblue;
+    border-radius: 10px;
+    display: flex;
+    align-items: right;
+}
+
