--- a/client/css/style.css
+++ b/client/css/style.css
@@ -45,6 +45,7 @@ h1 {
     height: 100%;
     width: 100%;
     background-image: url('/client/image/layered-waves-haikei.png');
+    background-size: cover;
     padding: 20px;
 }
 
