--- a/client/css/style.css
+++ b/client/css/style.css
@@ -10,17 +10,9 @@
 }
 
 body {
-    margin: 0;
-    padding: 0;
     display: flex;
     height: 100vh;
     overflow: hidden;
-}
-
-h1 {
-    font-size: 33px;
-    font-weight: 600;
-    padding: 200px 0;
 }
 
 .side-bar {
@@ -92,10 +84,6 @@ input {
                 rgba(0, 0, 0, 0.09) 0 -3px 5px;
 }
 
-input:focus {
-    outline: none;
-}
-
 .input-container #submit {
     margin-left: 10px;
     cursor: pointer;
@@ -142,25 +130,12 @@ nav {
     border-radius: 10px;
 }
 
-.chatbot-message {
-    text-align: right;
-    margin: 10px 0;
-    max-width: 100%; 
-}
-
-.chat-item {
-    margin-bottom: 10px;
-    padding: 10px;
-    background-color: lightblue;
-    border-radius: 10px;
-    display: flex;
-    align-items: right;
-}
 .chatbot {
     text-align: left;
     margin: 10px 0;
     max-width: 100%; 
     background-color: lightblue;
     border-radius: 10px;
+    color: black;
 }
 
